Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-18590

galera.versioning_trx_id: Test failure: mysqltest: Result content mismatch

    XMLWordPrintable

Details

    Description

      MariaDB Server: 10.4.3-MariaDB-debug built from sources, branch=10.4, commit: c568e25379600db8af4bd39df4761ba0fbc1a14e.
      Galera4 lib: debug built from sources, commit: 9cdbeb86c330b808571b14270e6428accb899c58.

      Run:

      ./mtr galera.versioning_trx_id --force --max-test-fail=0 --repeat=3
      ./mtr --suite galera --force --big-test --max-test-fail=0
      

      stdout.log: (the whole file is attached: 190215_desktop_stdout.log)

      Completed: Failed 1/3 tests, 66.67% were successful.
       
      CURRENT_TEST: galera.versioning_trx_id
      --- /home/stepan/galera/git/10.4/server/mysql-test/suite/galera/r/versioning_trx_id.result	2019-01-23 13:59:37.220821400 +0200
      +++ /home/stepan/galera/git/10.4/server/mysql-test/suite/galera/r/versioning_trx_id.reject	2019-02-15 15:38:57.358652400 +0200
      @@ -48,7 +48,7 @@
       0
       select count(*) from mysql.transaction_registry where begin_timestamp>=commit_timestamp;
       count(*)
      -0
      +1
       drop table t1;
       disconnect node_2;
       disconnect node_1;
       
      mysqltest: Result content mismatch
      

      See also attached 190215_galera.versioning_trx_id.zip.

      Note: This test is failed sporadically.

      Attachments

        Issue Links

          Activity

            People

              sysprg Julius Goryavsky (Inactive)
              stepan.patryshev Stepan Patryshev (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              12 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 2d 4h 55m
                  2d 4h 55m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.